Issue #55: Fixed splash styles and visual to support a dark theme. Hide splash on small screens. Minor global style modules' fixes. Swapped upload and demo data load options (upload option is the first).  Swapped remove and save action groups in table row edit form popup ('Save' is at the right side). Added space under editor page header. Swapped 'ok' and 'reset' buttons in the filter dialog popup form. Updated adaptive styles for buttons in the top of `EditorHeader`. Used source file name for the exported data file.

--- a/src/components/app/AppLayout/HeadContent.module.scss
+++ b/src/components/app/AppLayout/HeadContent.module.scss
@@ -1,6 +1,19 @@
 .HeadContent {
   @include defaultFont;
   flex: 1;
+  &.rootPage {
+    .AppTitle {
+      @media (min-height: $headerHeightTresholdMinPx) {
+        display: none;
+      }
+    }
+  }
+  .AppTitle {
+    transition: all $transitionTimeMs;
+    &:hover {
+      opacity: .8;
+    }
+  }
   .HeadContent_AppMenu {
     display: flex;
     gap: 4px;
@@ -13,9 +26,10 @@
     padding: 8px 12px;
     border-radius: 4px;
     text-decoration: none;
+    transition: all $transitionTimeMs;
     &:hover {
       background-color: color.change($primaryColor, $alpha: 0.1);
-      text-decoration: underline;
+      // text-decoration: underline;
     }
   }
   .HeadContent_AppMenu_ItemActive {
